Fix palette cut off slightly in modern theme in eye gaze mode

--- a/styles/themes/modern.css
+++ b/styles/themes/modern.css
@@ -232,6 +232,9 @@ body {
 	bottom: 0;
 	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5) inset;
 }
+.eye-gaze-mode .Colors-component.tall {
+	width: 53px;
+}
 .eye-gaze-mode .Colors-component.tall .color-button {
 	margin-left: 1px;
 }
